# modern-cpp-lib

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  test_api.py
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: CodeCoverage.cmake
include/: Add.hpp  Sub.hpp  interface.h  library.h
src/: interface.cpp  library.cpp
tests/: CMakeLists.txt  main.cpp  test.py  test_api.py
tests-catch2/: CMakeLists.txt  main.cpp  test_add.hpp
tests-google/: CMakeLists.txt  main.cpp  test_api.py
